// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterTopbar/> render should not render delete button when creating new view 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      <div>
        Filters: 
        eq('ticket.channel', 'email')
      </div>
      <button
        data-testid="remove-field"
        value="remove field"
      />
      <button
        data-testid="update-field"
        value="update field"
      />
      <button
        data-testid="update-field-operator"
        value="update field operator"
      />
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
  <div
    class="card-footer"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Create view
        </button>
        <button
          class="ml-2 btn btn-secondary"
          type="submit"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterTopbar/> render should not render footer when in search mode 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      <div>
        Filters: 
        eq('ticket.channel', 'email')
      </div>
      <button
        data-testid="remove-field"
        value="remove field"
      />
      <button
        data-testid="update-field"
        value="update field"
      />
      <button
        data-testid="update-field-operator"
        value="update field operator"
      />
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterTopbar/> render should render active view filters 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      <div>
        Filters: 
        eq('ticket.channel', 'email')
      </div>
      <button
        data-testid="remove-field"
        value="remove field"
      />
      <button
        data-testid="update-field"
        value="update field"
      />
      <button
        data-testid="update-field-operator"
        value="update field operator"
      />
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
  <div
    class="card-footer"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div>
        <div
          class="btn-group"
        >
          <button
            class="btn btn-success disabled"
            disabled=""
            id="update-view-button"
            type="submit"
          >
            Update view
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-success"
            type="button"
          >
            <span
              class="sr-only"
            >
              Toggle Dropdown
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              tabindex="0"
              type="button"
            >
              Save as new view
            </button>
          </div>
        </div>
        <button
          class="ml-2 btn btn-secondary"
          type="submit"
        >
          Cancel
        </button>
      </div>
      <div
        class="component d-inline-block"
      >
        <button
          class="btn btn-secondary"
          id="confirm-button-0"
          type="button"
        >
          <i
            class="material-icons md-2 mr-2 text-danger"
          >
            delete
          </i>
          Delete view
        </button>
      </div>
    </div>
  </div>
</div>
`;
